# audio-samples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindLibAO.cmake
src/: CMakeLists.txt  audio_samples.h  impulse_wav.c  prbs13.c  simple_kick.c
src/ASCFiles/: ASCFiles.c  ASCFiles.h  CMakeLists.txt
src/AudioSamplesCore/: ASCFunctions.c  ASCLogging.c  ASCLogging.h  ASCSimpleLogging.c  ASCSimpleLogging.h  AudioSamplesCore.c  AudioSamplesCore.h  CMakeLists.txt  Envelopes.c  Waveforms.c
src/AudioSamplesIO/: ASIORiff.c  ASIORiff.h  ASIOWav.c  ASIOWav.h  AudioSamplesIO.c  AudioSamplesIO.h  CMakeLists.txt
test/: CMakeLists.txt  test_riff_read.c  test_riff_read_write.c  test_wav_read.c  test_wav_read_write.c
